--- a/src/TextArea/TextArea.module.css
+++ b/src/TextArea/TextArea.module.css
@@ -19,7 +19,7 @@
     /* align-items: center; */
     justify-content: center;
 }
-  *{ 
+  /* *{ 
     position: fixed;
 	--ruler-num-c: #88;
 	--ruler-num-fz: 10px;
@@ -54,4 +54,4 @@
 }
 
 
-
+ */
