--- a/src/atoms/button/Button.module.css
+++ b/src/atoms/button/Button.module.css
@@ -7,10 +7,11 @@
    padding-bottom: 7px;
    padding-left: 4px;
    padding-right: 4px;
-  background-color: #edf2fa;
-  border-radius: 4px;
+   background-color: #edf2fa;
+   border-radius: 4px;
   
 }
 .btn:hover{
     background-color: #dadce0;
+    cursor: pointer;
 }
