--- a/src/Components/DropDown.module.css
+++ b/src/Components/DropDown.module.css
@@ -13,3 +13,17 @@
 .dropDownBtn:active{
     background-color: rgb(206, 206, 206);
 }
+.scriptIcon{
+    max-width: 1.2rem;
+}
+.input{
+    min-width: 15rem;
+    min-height: 2rem;
+    border: none;
+    outline: none;
+    position: relative;
+    left: 2.5rem;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
