--- a/src/MenuBar/MenuBar.module.css
+++ b/src/MenuBar/MenuBar.module.css
@@ -1,85 +1,81 @@
-.wrapper{
-display: flex;
-
-
+.wrapper {
+  display: flex;
+  margin-left: 10px;
+ 
 }
-.docIcon{
-    width: 2.3rem;
-    max-height: 3rem;
+.docIcon {
+  width: 2.3rem;
+  max-height: 3rem;
+  margin: 10px;
 }
-.innerWrapper{
-
-width: 100%;
-
+.innerWrapper {
+  width: 100%;
 }
-.innerWrapper :only-child{
-    cursor: pointer;
-   
+.innerWrapper :only-child {
+  cursor: pointer;
 }
 
-.leftSection{
-    display: flex;
-    justify-content: start;
-    width: 40rem;
-    gap: 10px;
-    margin-left: 13px;
-    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
-}
-.leftSection >span{
-    font-size: 18px;
-}
-.header{
-    display: flex;
-    width: 100%;
+.leftSection {
+  display: flex;
+  justify-content: start;
+  width: 40rem;
+  gap: 10px;
 
-    /* border: 1px solid; */
+  font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
+  margin-top: 10px;
+}
+.leftSection > span {
+  font-size: 18px;
+}
+.header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.rightSection {
+  display: flex;
+  gap: 1.5rem;
+  width: 30rem;
+  margin-top: 10px;
+  justify-content: end;
+  align-items: center;
+}
+.rightSection img {
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.videoIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 25px;
+  box-sizing: border-box;
+  padding: 5px;
+}
+.videoIcon:hover {
+  background-color: whitesmoke;
+}
+.videoIcon:active {
+  background-color: gray;
+}
+.videoDropDown {
+  background-color: whitesmoke;
+  position: absolute;
+  top: 3rem;
+  right: 13rem;
+}
+.menu {
+  display: flex;
 
-    justify-content: space-between;
-}
-.rightSection{
-    display: flex;
-    gap: 1.5rem;
-    width: 30rem;
+  /* border: 1px solid; */
 
-    justify-content: end;
-    align-items: center;
-}
-.rightSection img{
-    height: 2.5rem;
-    width: 2.5rem;
-    border-radius: 50%;
-    margin-right: 10px;
-    cursor: pointer;
-}
-.videoIcon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border-radius: 25px;
-    box-sizing: border-box;
-    padding: 5px;
-}
-.videoIcon:hover{
-    background-color: whitesmoke;
-}
-.videoIcon:active{
-    background-color:gray;
-}
-.videoDropDown{
-    background-color: whitesmoke;
-    position: absolute;
-    top: 3rem;
-    right: 13rem;
-}
-.menu{
-
-    display: flex;
-
-    /* border: 1px solid; */
-
-    width: 70%;
-    position: relative;
-    top: -30%;
-    gap: -5px;
+  width: 70%;
+  position: relative;
+  left: -0.5%;
+  top: -27%;
+  gap: -5px;
 }
