--- a/src/ActionBar/ActionBar.module.css
+++ b/src/ActionBar/ActionBar.module.css
@@ -4,15 +4,20 @@
     display: flex;
     height: 5vh;
     width: 97%;
-    background-color:#edf2fa ;
+    background-color: #edf2fa;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: 1rem;
     border-radius: 1rem;
+    position: fixed;
+    top: 69px;
+    z-index: -2;
+    right: 10px;
     
     
 }
+
 
 .innerContainer{
     display: flex;
