--- a/src/TextArea/TextArea.module.css
+++ b/src/TextArea/TextArea.module.css
@@ -4,20 +4,22 @@
     /* position: fixed; */
    border: 0.1px solid BLACK;
     /* background-color: red; */
-    height: 100vh ;
+    height: 200vh ;
     width: 50vw;
     background-color: #ffffff;
    
 }
 
 .wholeArea{
-
+	z-index: -4;
     background-color: #f9fbfd;
     width: 100%;
     height: 100%;
     display: flex;
     /* align-items: center; */
     justify-content: center;
+	position: relative;
+	top: 120px;
 }
 
 
