--- a/src/ActionBar/ActionBar.module.css
+++ b/src/ActionBar/ActionBar.module.css
@@ -13,6 +13,13 @@
     
     
 }
+.container button{
+    background-color: none;
+    border: none;
+    padding: 5px;
+    border-radius: 6px;
+    cursor: pointer;
+}
 
 .innerContainer{
     display: flex;
@@ -22,13 +29,25 @@
     /* justify-content: center; */
     align-items: center;
     gap: 2rem;
+
     
 }
 .leftActionBar{
     display: flex;
     gap: 1rem;
 }
-
+.leftActionBar button{
+    background-color: none;
+    border: none;
+    padding: 5px;
+    border-radius: 6px;
+}
+.leftActionBar button:hover{
+    background-color: #d2dbee;
+}
+.leftActionBar button:active{
+    background-color: #98a2b7;
+}
 .Select{
     height: 22px;
     width: 7rem;
@@ -43,6 +62,19 @@
     display: flex;
     gap: 1rem;
 }
+.textType button{
+    background-color: none;
+    border: none;
+    padding: 5px;
+    border-radius: 6px;
+
+}
+.textType button:hover{
+    background-color: #d2dbee;
+}
+.textType button:active{
+    background-color: #98a2b7;
+}
 .boxD{
     display: flex;
 
@@ -52,5 +84,14 @@
 .boxE{
     display: flex;
     gap: 1rem;
+    align-items: center;
 }
 
+#inputColor{
+    position: absolute;
+    top: 8rem;
+    left:30rem;
+   width: 5rem;
+   max-height: 0.5rem;
+    z-index: -1;
+}
