--- a/src/TextArea/TextArea.module.css
+++ b/src/TextArea/TextArea.module.css
@@ -7,19 +7,19 @@
     height: 200vh ;
     width: 50vw;
     background-color: #ffffff;
-   
+   margin-top: 40px;
 }
 
-.wholeArea{
-
+.wholeAreaWithRuler{
+/* border: 2px solid red; */
     background-color: #f9fbfd;
     width: 100%;
     height: 100%;
     display: flex;
-    /* align-items: center; */
+	
     justify-content: center;
-	position: relative;
-	top: 120px;
+	margin-top: 120px;
+
 
  /* Css for the side ruler */
 
@@ -28,16 +28,16 @@
 	--ruler-y: 1;
 
 	--ruler1-bdw: 1px;
-	--ruler1-c:  #000000;
-	--ruler1-h: 15px;
+	--ruler1-c:  #7a6d6d93;
+	--ruler1-h: 12px;
 	--ruler1-space: 5;
 
 	--ruler2-bdw: 1px;
-	--ruler2-c:  #000000;
-	--ruler2-h: 35px;
+	--ruler2-c:  #7a6d6d93;
+	--ruler2-h: 24px;
 	--ruler2-space: 50;
 
-  background-attachment: fixed;
+  background-attachment: relative;
 	background-image:
 		linear-gradient(90deg, var(--ruler1-c) 0 var(--ruler1-bdw), transparent 0),
 		linear-gradient(90deg, var(--ruler2-c) 0 var(--ruler2-bdw), transparent 0),
@@ -52,6 +52,14 @@
 		var(--ruler2-h) calc(var(--ruler-unit) * var(--ruler2-space) * var(--ruler-y));
 
 } 
-
+.wholeAreaWithoutRuler{
+	background-color: #f9fbfd;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+	position: relative;
+	top: 120px;
+}
 
 
